findbugs fixes
git-svn-id: http://svn.flexive.org/repository/flexive/trunk@654 d35d4baa-7912-0410-b0ae-edacad209e15